--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2021 - 2025</h2>
-									<h3>9.2 CGPA</h3>
+									<h3>9 CGPA</h3>
 									<h3>bachelor <span>of </span> computer Engineering</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -190,7 +190,7 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											Sinhgad College of Engineering,
+											 College of Engineering,
 										</h4>
 										<h5>Vadgaon, Maharashtra</h5>
 										<p class="description" style="text-align:justify">
@@ -204,7 +204,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2019 - 2021</h2>
-									<h3>92%</h3>
+									<h3>98%</h3>
 									<h3>12th (Higher Secondary Education)</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -228,7 +228,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2018 - 2019</h2>
-									<h3>94%</h3>
+									<h3>98%</h3>
 									<h3>10th (Secondary Education)</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
